program section done

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,295 @@
             </div>
         </main>
 
-
         <!-- why choose us -->
+        <main class="px-10 py-15">
+            <h1
+                class="text-center text-[#12275A] text-3xl md:text-4xl lg:text-5xl font-bold">Why
+                Choose
+                Us</h1>
+
+            <!-- grid -->
+            <div
+                class="max-w-7xl mx-auto  mt-15 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+
+                <!-- cards -->
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/userGroupIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold ">Trained & Caring
+                        Staff</h2>
+                    <p class="max-w-62 text-gray-400 ">Experienced caregivers
+                        dedicated to your child's
+                        wellbeing
+                    </p>
+                </div>
+
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/appleIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold ">Nutritious Meals</h2>
+                    <p class="max-w-62 text-gray-400 ">Healthy, balanced meals
+                        prepared fresh daily
+                    </p>
+                </div>
+
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/homeIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Safe Environment</h2>
+                    <p class="max-w-62 text-gray-400 ">Secure, clean, and
+                        comfortable spaces
+                    </p>
+                </div>
+
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/cameraIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold">CCTV Monitoring</h2>
+                    <p class="max-w-62 text-gray-400 ">Live access for parents'
+                        peace of mind
+                    </p>
+                </div>
+
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/userGroupIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Flexible Hours</h2>
+                    <p class="max-w-62 text-gray-400 ">Convenient drop-off and
+                        pick-up times
+                    </p>
+                </div>
+
+                <div
+                    class="flex flex-col gap-5 items-center justify-center shadow-md border border-black/10  px-9 py-9 text-center rounded-lg">
+                    <div
+                        class="size-28 rounded-full flex items-center justify-center bg-gray-200">
+                        <img src="./assets/userGroupIcon.png" alt>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Daily Updates</h2>
+                    <p class="max-w-62 text-gray-400 ">Regular updates on your
+                        child's activities
+                    </p>
+                </div>
+
+            </div>
+
+        </main>
+
+        <!-- programs -->
+        <main class="px-10 py-15 bg-gray-200">
+
+            <h1
+                class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Our
+                Age-Appropriate Programs</h1>
+
+            <p class="text-gray-500 mt-8 max-w-4xl mx-auto">We believe each
+                child develops at their own pace. Our curriculum
+                is thoughtfully designed to meet children where they are
+                developmentally while providing opportunities for growth and
+                exploration.</p>
+
+            <!-- grid -->
+            <div
+                class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 ">
+
+                <!-- cards - change card content -->
+
+                <!-- card 3 -->
+                <div class="px-4 lg:px-9 py-4 bg-white rounded-xl shadow group">
+
+                    <div class="h-44 overflow-hidden">
+                        <img src="./assets/kid1.png" alt
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
+                    </div>
+
+                    <!-- card title -->
+                    <h2 class="text-2xl font-semibold mt-2">Toddlers (1-2
+                        Years)</h2>
+
+                    <!-- card para -->
+                    <p class="text-sm text-gray-400 mt-4">Focused on sensory
+                        exploration, motor skills development, and building
+                        secure attachments with caregivers.</p>
+
+                    <!-- skills -->
+                    <div class>
+                        <h3 class="text-lg font-semibold mt-4">Key Skills
+                            Developed</h3>
+                        <div class="grid grid-cols-2 gap-5 mt-4 px-3">
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Basic social interaction
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Sensory exploration
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Language foundations
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Motor development
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- button -->
+                    <button
+                        class="flex items-center gap-2 bg-orange-400 text-white font-semibold px-2 py-2 rounded-full cursor-pointer text-nowrap mt-8">
+                        Enroll Now
+                        <img src="./assets/arrowWhite.png" alt="icon"
+                            class="size-3 object-cover">
+                    </button>
+
+                </div>
+
+                <!-- card 2 -->
+                <div class="px-4 lg:px-9 py-4 bg-white rounded-xl shadow group">
+
+                    <div class="h-44 overflow-hidden">
+                        <img src="./assets/kid2.png" alt
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
+                    </div>
+
+                    <!-- card title -->
+                    <h2 class="text-2xl font-semibold mt-2">Toddlers (1-2
+                        Years)</h2>
+
+                    <!-- card para -->
+                    <p class="text-sm text-gray-400 mt-4">Focused on sensory
+                        exploration, motor skills development, and building
+                        secure attachments with caregivers.</p>
+
+                    <!-- skills -->
+                    <div class>
+                        <h3 class="text-lg font-semibold mt-4">Key Skills
+                            Developed</h3>
+                        <div class="grid grid-cols-2 gap-5 mt-4 px-3">
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Basic social interaction
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Sensory exploration
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Language foundations
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Motor development
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- button -->
+                    <button
+                        class="flex items-center gap-2 bg-orange-400 text-white font-semibold px-2 py-2 rounded-full cursor-pointer text-nowrap mt-8">
+                        Enroll Now
+                        <img src="./assets/arrowWhite.png" alt="icon"
+                            class="size-3 object-cover">
+                    </button>
+
+                </div>
+
+                <!-- card 3 -->
+                <div class="px-4 lg:px-9 py-4 bg-white rounded-xl shadow group">
+
+                    <div class="h-44 overflow-hidden">
+                        <img src="./assets/kid3.png" alt
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
+                    </div>
+
+                    <!-- card title -->
+                    <h2 class="text-2xl font-semibold mt-2">Toddlers (1-2
+                        Years)</h2>
+
+                    <!-- card para -->
+                    <p class="text-sm text-gray-400 mt-4">Focused on sensory
+                        exploration, motor skills development, and building
+                        secure attachments with caregivers.</p>
+
+                    <!-- skills -->
+                    <div class>
+                        <h3 class="text-lg font-semibold mt-4">Key Skills
+                            Developed</h3>
+                        <div class="grid grid-cols-2 gap-5 mt-4 px-3">
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Basic social interaction
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Sensory exploration
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Language foundations
+                            </p>
+                            <p
+                                class="flex items-center gap-2 text-sm font-semibold">
+                                <img src="./assets/coloredTick.png" alt
+                                    class="size-4">
+                                Motor development
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- button -->
+                    <button
+                        class="flex items-center gap-2 bg-orange-400 text-white font-semibold px-2 py-2 rounded-full cursor-pointer text-nowrap mt-8">
+                        Enroll Now
+                        <img src="./assets/arrowWhite.png" alt="icon"
+                            class="size-3 object-cover">
+                    </button>
+
+                </div>
+
+            </div>
+
+        </main>
 
     </body>
 </html>
