--- a/src/index.html
+++ b/src/index.html
@@ -337,5 +337,138 @@
 
         </main>
 
+        <!-- Schedule -->
+        <main class="px-10 py-15">
+
+            <h1
+                class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Our
+                Daily Schedule
+            </h1>
+
+            <p class="text-gray-500 text-center mt-8 max-w-2xl mx-auto">We
+                provide a balanced day of learning, play, and rest. Our
+                consistent schedule helps children feel secure while building
+                independence.
+            </p>
+
+            <!-- schedule -->
+            <div class="max-w-3xl mx-auto space-y-8 mt-10">
+
+                <!-- 1 -->
+                <div class="flex items-center gap-4">
+                    <!-- icon -->
+                    <div class="w-2/12 flex items-center justify-center">
+                        <img src="./assets/sun.png" alt class="size-5">
+                    </div>
+                    <!-- content -->
+                    <div
+                        class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
+                        <div
+                            class="flex flex-col md:flex-row items-start gap-4">
+                            <h2 class="text-xl font-semibold">Arrival & Welcome</h2>
+                            <span
+                                class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">8:00-9:00
+                                AM</span>
+                        </div>
+                        <p class="mt-2 text-gray-400 text-shadow-sm">Free play,
+                            parent check-ins, and morning
+                            greetings</p>
+                    </div>
+                </div>
+
+                <!-- 2 -->
+                <div class="flex items-center gap-4">
+                    <!-- icon -->
+                    <div class="w-2/12 flex items-center justify-center">
+                        <img src="./assets/sun.png" alt class="size-5">
+                    </div>
+                    <!-- content -->
+                    <div
+                        class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
+                        <div
+                            class="flex flex-col md:flex-row items-start gap-4">
+                            <h2 class="text-xl font-semibold">Morning Circle
+                            </h2>
+                            <span
+                                class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">9:00-9:30
+                                AM</span>
+                        </div>
+                        <p class="mt-2 text-gray-400 text-shadow-sm">Calendar,
+                            weather, songs, and introduction to daily themes</p>
+                    </div>
+                </div>
+
+                <!-- 3 -->
+                <div class="flex items-center gap-4">
+                    <!-- icon -->
+                    <div class="w-2/12 flex items-center justify-center">
+                        <img src="./assets/sun.png" alt class="size-5">
+                    </div>
+                    <!-- content -->
+                    <div
+                        class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
+                        <div
+                            class="flex flex-col md:flex-row items-start gap-4">
+                            <h2 class="text-xl font-semibold">Learning Circle
+                            </h2>
+                            <span
+                                class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">9:30-10:30
+                                AM</span>
+                        </div>
+                        <p class="mt-2 text-gray-400 text-shadow-sm">Free play,
+                            parent check-ins, and morning greetings</p>
+                    </div>
+                </div>
+
+                <!-- 4 -->
+                <div class="flex items-center gap-4">
+                    <!-- icon -->
+                    <div class="w-2/12 flex items-center justify-center">
+                        <img src="./assets/sun.png" alt class="size-5">
+                    </div>
+                    <!-- content -->
+                    <div
+                        class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
+                        <div
+                            class="flex flex-col md:flex-row items-start gap-4">
+                            <h2 class="text-xl font-semibold">Lunch Time
+
+                            </h2>
+                            <span
+                                class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">11:00-12:00
+                                AM</span>
+                        </div>
+                        <p class="mt-2 text-gray-400 text-shadow-sm">Healthy
+                            meals and practicing table manners</p>
+                    </div>
+                </div>
+
+                <!-- 5 -->
+                <div class="flex items-center gap-4">
+                    <!-- icon -->
+                    <div class="w-2/12 flex items-center justify-center">
+                        <img src="./assets/sun.png" alt class="size-5">
+                    </div>
+                    <!-- content -->
+                    <div
+                        class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
+                        <div
+                            class="flex flex-col md:flex-row items-start gap-4">
+                            <h2 class="text-xl font-semibold">Rest Time
+
+                            </h2>
+                            <span
+                                class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">12:00-2:00
+                                PM</span>
+                        </div>
+                        <p class="mt-2 text-gray-400 text-shadow-sm">Quiet time
+                            for napping or relaxing activities</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </main>
+
     </body>
 </html>
