--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
                 independence.
             </p>
 
-            <!-- schedule -->
+            <!-- schedule cards -->
             <div class="max-w-3xl mx-auto space-y-8 mt-10">
 
                 <!-- 1 -->
@@ -365,7 +365,8 @@
                         class="px-4 py-4 rounded-xl border border-black/10 shadow-md">
                         <div
                             class="flex flex-col md:flex-row items-start gap-4">
-                            <h2 class="text-xl font-semibold">Arrival & Welcome</h2>
+                            <h2 class="text-xl font-semibold">Arrival &
+                                Welcome</h2>
                             <span
                                 class="bg-gray-200 px-2 py-1 rounded-full text-sm font-semibold">8:00-9:00
                                 AM</span>
@@ -469,6 +470,30 @@
             </div>
 
         </main>
+
+        <!-- schedule flexibility -->
+        <main class="px-10 py-15 bg-[#FDFAF0] relative">
+            <h1
+                class="text-center text-[#12275A] text-3xl md:text-4xl lg:text-5xl font-bold">Schedule
+                flexibility
+            </h1>
+
+            <p class="text-gray-500 text-center mt-8 max-w-3xl mx-auto">
+                We adapt our daily schedule to meet individual needs and
+                interests of children. Our flexible approach ensures all
+                developmental areas are covered while following children's
+                natural curiosity.
+            </p>
+          
+            <!-- absolute images -->
+             <img src="./assets/abs1.png" alt="" class="absolute size-28 md:size-32 object-cover -top-10 right-0">
+
+             <img src="./assets/abs2.png" alt="" class="absolute size-28 md:size-32 object-cover">
+
+
+        </main>
+
+        
 
     </body>
 </html>
