--- a/src/index.html
+++ b/src/index.html
@@ -484,16 +484,76 @@
                 developmental areas are covered while following children's
                 natural curiosity.
             </p>
-          
+
             <!-- absolute images -->
-             <img src="./assets/abs1.png" alt="" class="absolute size-28 md:size-32 object-cover -top-10 right-0">
+            <img src="./assets/abs1.png" alt
+                class="absolute size-28 md:size-32 object-cover -top-10 right-0">
 
-             <img src="./assets/abs2.png" alt="" class="absolute size-28 md:size-32 object-cover">
-
+            <img src="./assets/abs2.png" alt
+                class="absolute size-28 md:size-32 object-cover">
 
         </main>
 
-        
+        <!-- skills we develop -->
+        <main class="px-10 py-15 bg-[#DCF1FC]">
+            <h1
+                class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Skills
+                We Develop
+            </h1>
 
-    </body>
-</html>
+            <!-- grid -->
+            <div
+                class="mt-15 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+        </main>
+
+        </body>
+    </html>
