--- a/src/index.html
+++ b/src/index.html
@@ -494,66 +494,165 @@
 
         </main>
 
-        <!-- skills we develop -->
-        <main class="px-10 py-15 bg-[#DCF1FC]">
+        <!-- Engaging Activities -->
+        <main class="px-10 py-15">
             <h1
-                class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Skills
-                We Develop
+                class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Engaging
+                Activites
             </h1>
+
+            <p class="text-gray-500 text-center mt-8 max-w-2xl mx-auto">
+                Our curriculum includes a variety of hands-on activities
+                designed to foster curiosity, build skills, and make learning
+                fun.
+            </p>
 
             <!-- grid -->
             <div
-                class="mt-15 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 mt-15">
 
-                <div class="flex flex-col items-center justify-center gap-5">
-                    <div
-                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
-                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
-                        <img src="./assets/location.png" class="size-8">
+                <!-- cards -->
+
+                <!-- card 1 -->
+                <div
+                    class="px-2 lg:px-3 py-2 rounded-xl shadow-lg bg-[#DCF1FD] group">
+
+                    <div class="h-60 overflow-hidden rounded-lg"><img
+                            src="./assets/activity1.jpeg"
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
                     </div>
-                    <h2 class="text-2xl font-semibold">Social</h2>
-                    <p class="text-gray-500 text-shadow-sm">
-                        Cooperation & friendship skills
-                    </p>
+                    <div class="px-2 py-4">
+                        <h3 class="text-2xl font-semibold">Creative Arts</h3>
+                        <p class="text-gray-500 mt-2">Explore painting, drawing,
+                            collage, and sensory art experiences that encourage
+                            self-expression and creativity.</p>
+                    </div>
+
                 </div>
 
-                <div class="flex flex-col items-center justify-center gap-5">
-                    <div
-                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
-                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
-                        <img src="./assets/location.png" class="size-8">
+                <!-- card 2 -->
+                <div
+                    class="px-2 lg:px-3 py-2 rounded-xl shadow-lg bg-[#fff0e5] group">
+
+                    <div class="h-60 overflow-hidden rounded-lg"><img
+                            src="./assets/activity2.jpeg"
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
                     </div>
-                    <h2 class="text-2xl font-semibold">Social</h2>
-                    <p class="text-gray-500 text-shadow-sm">
-                        Cooperation & friendship skills
-                    </p>
+                    <div class="px-2 py-4">
+                        <h3 class="text-2xl font-semibold">Music & Movement</h3>
+                        <p class="text-gray-500 mt-2">Develop rhythm,
+                            coordination, and self-expression through songs,
+                            dance, and musical instrument exploration.</p>
+                    </div>
+
                 </div>
 
-                <div class="flex flex-col items-center justify-center gap-5">
-                    <div
-                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
-                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
-                        <img src="./assets/location.png" class="size-8">
+                <!-- card 3-->
+                <div
+                    class="px-2 lg:px-3 py-2 rounded-xl shadow-lg bg-white group">
+
+                    <div class="h-60 overflow-hidden rounded-lg"><img
+                            src="./assets/activity3.jpeg"
+                            class="size-full object-cover rounded-lg group-hover:scale-110 transition-all duration-300">
                     </div>
-                    <h2 class="text-2xl font-semibold">Social</h2>
-                    <p class="text-gray-500 text-shadow-sm">
-                        Cooperation & friendship skills
-                    </p>
+                    <div class="px-2 py-4">
+                        <h3 class="text-2xl font-semibold">Literacy &
+                            Language</h3>
+                        <p class="text-gray-500 mt-2">Foster a love of reading
+                            through storytelling, letter recognition, and rich
+                            vocabulary development activities.</p>
+                    </div>
+
                 </div>
 
-                <div class="flex flex-col items-center justify-center gap-5">
-                    <div
-                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
-                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
-                        <img src="./assets/location.png" class="size-8">
-                    </div>
-                    <h2 class="text-2xl font-semibold">Social</h2>
-                    <p class="text-gray-500 text-shadow-sm">
-                        Cooperation & friendship skills
-                    </p>
-                </div>
+            </div>
 
         </main>
 
-        </body>
-    </html>
+        <!-- skills we develop -->
+        <main class="px-10 py-15 bg-[#DCF1FC]">
+            <h1 class="text-center text-3xl md:text-4xl lg:text-5xl font-bold">
+                Skills We Develop
+            </h1>
+
+            <!-- Grid -->
+            <div
+                class="mt-15 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                <!-- Skill Card 1 -->
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <!-- Skill Card 2 -->
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <!-- Skill Card 3 -->
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+
+                <!-- Skill Card 4 -->
+                <div class="flex flex-col items-center justify-center gap-5">
+                    <div
+                        class="size-22 rounded-full bg-white flex items-center justify-center shadow-xl"
+                        style="box-shadow: inset 0 4px 6px rgba(0,0,0,0.2), 0 4px 10px rgba(0,0,0,0.3);">
+                        <img src="./assets/location.png" class="size-8">
+                    </div>
+                    <h2 class="text-2xl font-semibold">Social</h2>
+                    <p class="text-gray-500 text-shadow-sm">
+                        Cooperation & friendship skills
+                    </p>
+                </div>
+            </div>
+        </main>
+
+        <!-- gallary -->
+        <main class="px-10 py-15">
+            <h1
+                class="text-center text-[#385469] text-3xl md:text-4xl lg:text-5xl font-bold ">Gallary</h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-5 mt-10">
+               
+                <img src="./assets/gallery1.png"
+                    class="rounded-2xl w-full h-60 object-cover col-span-1 md:col-span-2">
+
+                <img src="./assets/gallary2.png"
+                    class="rounded-2xl w-full h-60 object-cover">
+                <img src="./assets/gallery3.jpeg"
+                    class="rounded-2xl w-full h-60 object-cover">
+                <img src="./assets/gallery4.jpeg"
+                    class="rounded-2xl w-full h-60 object-cover">
+                <img src="./assets/gallery5.jpeg"
+                    class="rounded-2xl w-full h-60 object-cover">
+            </div>
+
+        </main>
+
+    </body>
+</html>
