--- a/src/index.html
+++ b/src/index.html
@@ -638,7 +638,7 @@
                 class="text-center text-[#385469] text-3xl md:text-4xl lg:text-5xl font-bold ">Gallary</h1>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-5 mt-10">
-               
+
                 <img src="./assets/gallery1.png"
                     class="rounded-2xl w-full h-60 object-cover col-span-1 md:col-span-2">
 
@@ -650,6 +650,74 @@
                     class="rounded-2xl w-full h-60 object-cover">
                 <img src="./assets/gallery5.jpeg"
                     class="rounded-2xl w-full h-60 object-cover">
+            </div>
+
+        </main>
+
+       
+        <!-- enquiry form -->
+        <main class="px-10 py-15">
+            <h1
+                class="text-center text-3xl md:text-4xl lg:text-5xl font-bold ">ENQUIRE
+                NOW
+            </h1>
+
+            <!-- form -->
+            <div
+                class="max-w-2xl mx-auto p-6 bg-white shadow-md rounded-lg border border-black/10 mt-10 ">
+                <form class="space-y-5">
+                    <!-- Full Name -->
+                    <div>
+                        <label class="block font-semibold mb-1">Full
+                            Name</label>
+                        <input type="text" placeholder="Full Name"
+                            class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
+                    </div>
+
+                    <!-- Email ID -->
+                    <div>
+                        <label class="block font-semibold mb-1">Email ID</label>
+                        <input type="email" placeholder="Email ID"
+                            class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
+                    </div>
+
+                    <!-- Phone Number -->
+                    <div>
+                        <label class="block font-semibold mb-1">Phone
+                            Number</label>
+                        <input type="tel" placeholder="Phone Number"
+                            class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
+                    </div>
+
+                    <!-- Select State & City -->
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div>
+                            <label class="block font-semibold mb-1">Select
+                                State</label>
+                            <input type="text" placeholder="State"
+                                class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
+                        </div>
+                        <div>
+                            <label class="block font-semibold mb-1">Select
+                                City</label>
+                            <input type="text" placeholder="City"
+                                class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
+                        </div>
+                    </div>
+
+                    <!-- Message -->
+                    <div>
+                        <label class="block font-semibold mb-1">Message</label>
+                        <textarea placeholder="Write Message"
+                            class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300 h-32"></textarea>
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit"
+                        class="block w-fit mx-auto px-8 py-3 bg-cyan-400 text-white font-semibold rounded-md hover:bg-cyan-500 transition cursor-pointer">
+                        Submit
+                    </button>
+                </form>
             </div>
 
         </main>
