--- a/src/index.html
+++ b/src/index.html
@@ -654,7 +654,6 @@
 
         </main>
 
-       
         <!-- enquiry form -->
         <main class="px-10 py-15">
             <h1
@@ -721,6 +720,96 @@
             </div>
 
         </main>
+
+        <!-- image above footer -->
+         <div class="py-10">
+            <img src="./assets/footerimg.png" alt="" class="w-full object-cover">
+         </div>
+
+        <!-- footer -->
+        <footer class="bg-white px-6 md:px-16 py-8">
+            <div
+                class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 place-items-center gap-8">
+                <!-- Left Section (Logo & Description) -->
+                <div>
+                    <div class="flex items-center space-x-2">
+                        <img src="./assets/logo.png" alt="Logo"
+                            class="w-10 h-10 rounded-full">
+                        <img src="./assets/9To9 School.png" class>
+                    </div>
+                    <p class="font-semibold text-sm mt-2">
+                        Where every game is a lesson, and every lesson is a
+                        game. Our app transforms education into playful games,
+                        captivating young minds with interactive fun.
+                    </p>
+                    <div class="flex space-x-3 mt-4">
+                        <button>
+                            <img src="./assets/plarstore.png"
+                                alt="Google Play" class="h-10">
+                        </button>
+                        <button>
+                            <img src="./assets/appstore.png"
+                                alt="App Store" class="h-10">
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Quick Links -->
+                <div>
+                    <h3 class="text-lg font-bold">Quick links</h3>
+                    <ul class="mt-3 space-y-2 font-semibold">
+                        <li><a href="#" class="hover:text-black">Home</a></li>
+                        <li><a href="#" class="hover:text-black">Games</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Subjects</a></li>
+                        <li><a href="#" class="hover:text-black">About</a></li>
+                    </ul>
+                </div>
+
+                <!-- Company -->
+                <div>
+                    <h3 class="text-lg font-bold">Company</h3>
+                    <ul class="mt-3 space-y-2 font-semibold">
+                        <li><a href="#" class="hover:text-black">About</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Features</a></li>
+                        <li><a href="#" class="hover:text-black">Works</a></li>
+                        <li><a href="#" class="hover:text-black">Career</a></li>
+                    </ul>
+                </div>
+
+                <!-- Gallery -->
+                <div>
+                    <h3 class="text-lg font-bold">Gallery</h3>
+                    <div class="grid grid-cols-3 gap-2 mt-3">
+                        <img src="./assets/gallery1.png" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                        <img src="./assets/gallary2.png" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                        <img src="./assets/gallery3.jpeg" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                        <img src="./assets/gallery4.jpeg" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                        <img src="./assets/gallery5.jpeg" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                        <img src="./assets/gallery5.jpeg" alt="Gallery"
+                            class="rounded-lg h-20 w-full">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bottom Section -->
+            <div
+                class="mt-8 border-t border-t-black/20 pt-4 flex flex-col md:flex-row justify-between font-semibold text-sm">
+                <div class="flex space-x-4">
+                    <a href="#" class="hover:text-black">Privacy Policy</a>
+                    <a href="#" class="hover:text-black">Terms & Conditions</a>
+                    <a href="#" class="hover:text-black">Support</a>
+                </div>
+                <p class="mt-4 md:mt-0">&copy; Copyright 2024, All Rights
+                    Reserved</p>
+            </div>
+        </footer>
 
     </body>
 </html>
