--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,26 @@
     </head>
     <body>
 
+        <!-- header -->
+        <header class="p-5 bg-gray-100/50 backdrop-blur-md fixed top-0 left-0 right-0">
+            <nav class="max-w-[90%] mx-auto flex justify-between items-center ">
+                <div class="w-16 h-16 rounded-lg">
+                    <img src="./assets/logo.png" alt="Logo"
+                        class="size-full object-cover rounded-lg">
+                </div>
+
+                <div class="hidden md:flex items-center space-x-4 ">
+                    <button
+                        class="bg-white  text-blue-900 px-4 py-2 rounded-lg font-semibold">Talk
+                        to Expert</button>
+                    <button
+                        class="bg-cyan-400 text-white font-semibold px-4 py-2 rounded-lg">Book
+                        a
+                        Appointment</button>
+                </div>
+            </nav>
+        </header>
+
         <!-- Hero section -->
         <main class="px-10 py-15 relative min-h-screen flex items-center">
             <!-- background -->
@@ -722,9 +742,9 @@
         </main>
 
         <!-- image above footer -->
-         <div class="py-10">
-            <img src="./assets/footerimg.png" alt="" class="w-full object-cover">
-         </div>
+        <div class="py-10">
+            <img src="./assets/footerimg.png" alt class="w-full object-cover">
+        </div>
 
         <!-- footer -->
         <footer class="bg-white px-6 md:px-16 py-8">
