--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <body>
 
         <!-- header -->
-        <header class="p-5 bg-gray-100/50 backdrop-blur-md fixed top-0 left-0 right-0">
+        <header
+            class="p-5 bg-gray-100/50 backdrop-blur-md fixed top-0 left-0 right-0">
             <nav class="max-w-[90%] mx-auto flex justify-between items-center ">
                 <div class="w-16 h-16 rounded-lg">
                     <img src="./assets/logo.png" alt="Logo"
@@ -29,7 +30,8 @@
         </header>
 
         <!-- Hero section -->
-        <main class="px-10 py-15 relative min-h-screen flex items-center">
+        <main
+            class="px-5 md:px-8 lg:px-10 py-15 relative min-h-screen flex items-center">
             <!-- background -->
             <div class="absolute inset-0 -z-10">
                 <img src="./assets/sectionBanner.png" alt="banner"
@@ -68,7 +70,7 @@
         </main>
 
         <!-- why choose us -->
-        <main class="px-10 py-15">
+        <main class="px-5 md:px-8 lg:px-10  py-15">
             <h1
                 class="text-center text-[#12275A] text-3xl md:text-4xl lg:text-5xl font-bold">Why
                 Choose
@@ -158,7 +160,7 @@
         </main>
 
         <!-- programs -->
-        <main class="px-10 py-15 bg-gray-200">
+        <main class="px-5 md:px-8 lg:px-10  py-15 bg-gray-200">
 
             <h1
                 class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Our
@@ -358,7 +360,7 @@
         </main>
 
         <!-- Schedule -->
-        <main class="px-10 py-15">
+        <main class="px-5 md:px-8 lg:px-10  py-15">
 
             <h1
                 class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Our
@@ -492,7 +494,7 @@
         </main>
 
         <!-- schedule flexibility -->
-        <main class="px-10 py-15 bg-[#FDFAF0] relative">
+        <main class="px-5 md:px-8 lg:px-10  py-15 bg-[#FDFAF0] relative">
             <h1
                 class="text-center text-[#12275A] text-3xl md:text-4xl lg:text-5xl font-bold">Schedule
                 flexibility
@@ -515,7 +517,7 @@
         </main>
 
         <!-- Engaging Activities -->
-        <main class="px-10 py-15">
+        <main class="px-5 md:px-8 lg:px-10  py-15">
             <h1
                 class="text-center  text-3xl md:text-4xl lg:text-5xl font-bold">Engaging
                 Activites
@@ -590,7 +592,7 @@
         </main>
 
         <!-- skills we develop -->
-        <main class="px-10 py-15 bg-[#DCF1FC]">
+        <main class="px-5 md:px-8 lg:px-10  py-15 bg-[#DCF1FC]">
             <h1 class="text-center text-3xl md:text-4xl lg:text-5xl font-bold">
                 Skills We Develop
             </h1>
@@ -653,7 +655,7 @@
         </main>
 
         <!-- gallary -->
-        <main class="px-10 py-15">
+        <main class="px-5 md:px-8 lg:px-10  py-15">
             <h1
                 class="text-center text-[#385469] text-3xl md:text-4xl lg:text-5xl font-bold ">Gallary</h1>
 
@@ -675,7 +677,7 @@
         </main>
 
         <!-- enquiry form -->
-        <main class="px-10 py-15">
+        <main class="px-5 md:px-8 lg:px-10  py-15">
             <h1
                 class="text-center text-3xl md:text-4xl lg:text-5xl font-bold ">ENQUIRE
                 NOW
@@ -742,12 +744,12 @@
         </main>
 
         <!-- image above footer -->
-        <div class="py-10">
+        <div class="px-5 md:px-8 lg:px-10 ">
             <img src="./assets/footerimg.png" alt class="w-full object-cover">
         </div>
 
         <!-- footer -->
-        <footer class="bg-white px-6 md:px-16 py-8">
+        <footer class="bg-white px-5 md:px-8 lg:px-10  py-8">
             <div
                 class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 place-items-center gap-8">
                 <!-- Left Section (Logo & Description) -->
