--- a/src/index.html
+++ b/src/index.html
@@ -654,8 +654,53 @@
             </div>
         </main>
 
+        <!-- tesimonial section -->
+        <main class=" px-5 md:px-8 lg:px-10 py-15">
+            <h1
+                class="text-center text-[#252650] text-3xl md:text-4xl lg:text-5xl font-bold ">What
+                they are saying</h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-5 mt-10">
+
+                <div class="relative p-8 rounded-2xl border border-black/10 shadow">
+                    <p class="font-medium py-4">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Fugiat, voluptate. Quis sunt consequatur facere nemo.
+                    </p>
+                    <div class="absolute size-16 rounded-full">
+                        <img src="./assets/person.jpeg" alt
+                            class="size-full rounded-full object-cover">
+                    </div>
+                </div>
+
+                <div class="relative p-8 rounded-2xl border border-black/10 shadow">
+                    <p class="font-medium py-4">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Fugiat, voluptate. Quis sunt consequatur facere nemo.
+                    </p>
+                    <div class="absolute size-16 rounded-full">
+                        <img src="./assets/person.jpeg" alt
+                            class="size-full rounded-full object-cover">
+                    </div>
+                </div>
+
+                <div class="relative p-8 rounded-2xl border border-black/10 shadow">
+                    <p class="font-medium py-4">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Fugiat, voluptate. Quis sunt consequatur facere nemo.
+                    </p>
+                    <div class="absolute size-16 rounded-full">
+                        <img src="./assets/person.jpeg" alt
+                            class="size-full rounded-full object-cover">
+                    </div>
+                </div>
+
+            </div>
+
+        </main>
+
         <!-- gallary -->
-        <main class="px-5 md:px-8 lg:px-10  py-15">
+        <main class=" px-5 md:px-8 lg:px-10 py-15">
             <h1
                 class="text-center text-[#385469] text-3xl md:text-4xl lg:text-5xl font-bold ">Gallary</h1>
 
@@ -697,7 +742,8 @@
 
                     <!-- Email ID -->
                     <div>
-                        <label class="block font-semibold mb-1">Email ID</label>
+                        <label class="block font-semibold mb-1">Email
+                            ID</label>
                         <input type="email" placeholder="Email ID"
                             class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300">
                     </div>
@@ -728,7 +774,8 @@
 
                     <!-- Message -->
                     <div>
-                        <label class="block font-semibold mb-1">Message</label>
+                        <label
+                            class="block font-semibold mb-1">Message</label>
                         <textarea placeholder="Write Message"
                             class="w-full px-4 py-2 border border-black/10 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-300 h-32"></textarea>
                     </div>
@@ -745,7 +792,8 @@
 
         <!-- image above footer -->
         <div class="px-5 md:px-8 lg:px-10 ">
-            <img src="./assets/footerimg.png" alt class="w-full object-cover">
+            <img src="./assets/footerimg.png" alt
+                class="w-full object-cover">
         </div>
 
         <!-- footer -->
@@ -761,7 +809,8 @@
                     </div>
                     <p class="font-semibold text-sm mt-2">
                         Where every game is a lesson, and every lesson is a
-                        game. Our app transforms education into playful games,
+                        game. Our app transforms education into playful
+                        games,
                         captivating young minds with interactive fun.
                     </p>
                     <div class="flex space-x-3 mt-4">
@@ -780,11 +829,14 @@
                 <div>
                     <h3 class="text-lg font-bold">Quick links</h3>
                     <ul class="mt-3 space-y-2 font-semibold">
-                        <li><a href="#" class="hover:text-black">Home</a></li>
-                        <li><a href="#" class="hover:text-black">Games</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Home</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Games</a></li>
                         <li><a href="#"
                                 class="hover:text-black">Subjects</a></li>
-                        <li><a href="#" class="hover:text-black">About</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">About</a></li>
                     </ul>
                 </div>
 
@@ -792,11 +844,14 @@
                 <div>
                     <h3 class="text-lg font-bold">Company</h3>
                     <ul class="mt-3 space-y-2 font-semibold">
-                        <li><a href="#" class="hover:text-black">About</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">About</a></li>
                         <li><a href="#"
                                 class="hover:text-black">Features</a></li>
-                        <li><a href="#" class="hover:text-black">Works</a></li>
-                        <li><a href="#" class="hover:text-black">Career</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Works</a></li>
+                        <li><a href="#"
+                                class="hover:text-black">Career</a></li>
                     </ul>
                 </div>
 
@@ -825,7 +880,8 @@
                 class="mt-8 border-t border-t-black/20 pt-4 flex flex-col md:flex-row justify-between font-semibold text-sm">
                 <div class="flex space-x-4">
                     <a href="#" class="hover:text-black">Privacy Policy</a>
-                    <a href="#" class="hover:text-black">Terms & Conditions</a>
+                    <a href="#" class="hover:text-black">Terms &
+                        Conditions</a>
                     <a href="#" class="hover:text-black">Support</a>
                 </div>
                 <p class="mt-4 md:mt-0">&copy; Copyright 2024, All Rights
